--- a/src/app/blogs/baru.mdx
+++ b/src/app/blogs/baru.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Ramji"
-date: "2024-10-02"
-description: "etste"
-author: set
-category: [sdf, , asdf, asdf, as]
+title: "ramji"
+date: "2024-10-11"
+description: "asdf"
+author: qweqw
+category: [s]
 ---
 
-asdfasdfasdf
+asdfasdfasdfa
